# PasswordTool

./: README.md  india_passwords_wordlist.txt  pyproject.toml  requirements.txt  run_passwordtool.py  setup.cfg
pass_tool/: analyzer.py  gui.py  wordlist.py
scripts/: installer_ubuntu.sh  installer_windows.bat
