[metadata]
name = pass_tool
version = 1.0.0
author = Sridhar S
description = Password Strength Analyzer & Custom Wordlist Generator
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    zxcvbn>=4.4.28
    nltk>=3.8.1

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0

[options.entry_points]
console_scripts =
    pass-tool = pass_tool.gui:main
